refactor(allocation): eliminar duplicación cross-módulo, extraer common/util y corregir stubs de tests